src/objects/DBLicense_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>PRIMARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADDITIONAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DBLicense Contacts</relationshipLabel>
        <relationshipName>DBLicense_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DBLicense__c</fullName>
        <label>DBLicense</label>
        <referenceTo>DBTuna_License__c</referenceTo>
        <relationshipLabel>DBLicense Contacts</relationshipLabel>
        <relationshipName>DBLicense_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>DBLicense Contacts</label>
    <nameField>
        <label>DBLicense Contacts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DBLicense Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>